# poetry-template

./: .gitignore  README.rst  analisis.ipynb  kd  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: docker-init.sh
